[tool.poetry]
name = "mini-six"
version = "0.1.0"
description = "A cross-platform, highly scalable, maintainable, machine-aware, machine-aware, limited state machine framework."
authors = ["TsangHans <gzzenghan@189.cn>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Six-Project/six.git"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.21"
opencv-python = "4.4.0.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
